# AI_selection_Problem

./: .gitignore  README.md  TEST_REPORT.md  index.html  package-lock.json
Selection_system/: README.md
Selection_system/UI/: index.css
Selection_system/backend/: BUILD.md  algorithm.py  api.py  setup.py  storage.py
Selection_system/backend/cover_core/: __init__.py  setup.py
Selection_system/backend/cover_core/src/: bindings.cpp  core.cpp  core.h  dfs.h  greedy.h
Selection_system/backend/results/: 45-12-6-5-5-1-182.json  45-13-6-5-5-1-298.json  45-14-6-6-4-1-17.json
Selection_system/results/: 45-10-6-6-4-1-3.json  45-12-6-5-5-1-182.json  45-12-6-6-4-1-6.json  45-13-6-5-5-1-298.json  45-18-6-6-4-1-57.json  45-20-6-6-4-1-90.json  45-8-6-5-5-1-12.json  45-8-6-6-5-1-4.json  45-9-6-4-4-1-12.json  45-9-6-5-4-1-3.json
UI/: App.tsx
backend/: algorithm.py  api.py  back_algorithm.py  storage.py
backend/cover_core/: CMakeLists.txt  __init__.py  setup.py
backend/cover_core/src/: bindings.cpp  bitmask.h  greedy.h
backend/results/: DELIVERY_NOTES.md
backend/tests/: benchmark_cases.py  final_baseline_runner_14.py
